1 add record length and word length to srec file by using reformat_srec.java 2 starting to integrate it into winix

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,25 @@ WRAMP Manual.pdf
 RexSimulator.dll
 RexSimulatorGui.exe
 *.o
-*.s
 *.srec
 test
+kernel/exception.s
+kernel/idle.s
+kernel/main.s
+kernel/proc.s
+kernel/system.s
+lib/ipc.s
+lib/stdio.s
+lib/string.s
+lib/syscall.s
+lib/util.s
+user/shell.s
+*.java
+*.class
+*.srec~
+init.c
+init.s
+shell.c
+shell.s
+shell.c~
+
