--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
-sources = stdio.c string.c syscall.c ipc.c util.c
-compile = stdio.s string.s syscall.s ipc.s util.s
-assemble = stdio.o string.o syscall.o wramp_syscall.o ipc.o util.o
+sources = stdio.c string.c syscall.c ipc.c util.c memory.c
+compile = stdio.s string.s syscall.s ipc.s util.s memory.s
+assemble = stdio.o string.o syscall.o wramp_syscall.o ipc.o util.o memory.o
 
 all: $(assemble)
 
