successfully load init code to the memory and run it during boot. not sure if it's gonna break if I add more staff to it though

--- a/.gitignore
+++ b/.gitignore
@@ -4,23 +4,13 @@ WRAMP Manual.pdf
 RexSimulator.dll
 RexSimulatorGui.exe
 *.o
+*.s
 *.srec
 test
-kernel/exception.s
-kernel/idle.s
-kernel/main.s
-kernel/proc.s
-kernel/system.s
-lib/ipc.s
-lib/stdio.s
-lib/string.s
-lib/syscall.s
-lib/util.s
-user/shell.s
-*.java
 *.class
 *.srec~
-init.s
-shell.s
-shell.c~
-
+!kernel/wramp.s
+!lib/wramp_syscall.s
+!kernel/util/limits_head.s
+!kernel/util/limits_tail.s
+*.c~
