--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,6 @@
-sources = main.c proc.c system.c exception.c idle.c sys_memory.c
-compile = main.s proc.s system.s exception.s idle.s sys_memory.s
-assemble = main.o proc.o system.o exception.o idle.o wramp.o sys_memory.o util/limits_head.o util/limits_tail.o
+sources = main.c proc.c system.c exception.c idle.c sys_memory.c sys_stdio.c
+compile = main.s proc.s system.s exception.s idle.s sys_memory.s sys_stdio.s
+assemble = main.o proc.o system.o exception.o idle.o wramp.o sys_memory.o sys_stdio.o util/limits_head.o util/limits_tail.o
 
 all: $(assemble)
 
